package org.ulysse.collabtaskapp;
import java.util.ArrayList;
import java.util.List;
public class KanbanBoard {
    private List<String> columns;
    private List<Task> tasks;

    public KanbanBoard() {}

    public List<String> getColumns() {
        return columns;
    }

}

