package org.ulysse.collabtaskapp;

public enum Priority {
    LOW,
    MEDIUM,
    HIGH
}
