package org.ulysse.collabtaskapp;

public enum Status {
    TO_DO,
    IN_PROGRESS,
    DONE
}
